apps/open-webui/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: open-webui
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - ai.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: open-webui
          port: 80
